--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">noquieroreprobarDiosito</string>
+    <string name="description_img_photo">imagen de la tienda</string>
 </resources>
